crates/core/tests/ui/feature_not_found.stderr
error[E0277]: the trait bound `Foo: Mock` is not satisfied
 --> tests/ui/feature_not_found.rs:8:6
  |
8 |     <Foo as damock::Mock>::mock();
  |      ^^^ the trait `Mock` is not implemented for `Foo`
  |
  = help: the following other types implement trait `Mock`:
            ()
            Option<T>
